crates/sui-adapter-transactional-tests/tests/programmable/split_coins.exp
processed 20 tasks

init:
A: object(0,0), B: object(0,1)

task 1 'publish'. lines 9-26:
Error: warning[W02021]: duplicate alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpLOwGda:11:14
   │
11 │     use std::vector;
   │              ^^^^^^ Unnecessary alias 'vector' for module 'std::vector'. This alias is provided by default
   │
   = This warning can be suppressed with '#[allow(duplicate_alias)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W02021]: duplicate alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpLOwGda:13:14
   │
13 │     use sui::transfer;
   │              ^^^^^^^^ Unnecessary alias 'transfer' for module 'sui::transfer'. This alias is provided by default
   │
   = This warning can be suppressed with '#[allow(duplicate_alias)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04024]: invalid usage of immutable variable
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.gKPRoFNgiS/.tmpLOwGda:19:38
   │
17 │     public fun transfer(v: vector<coin::Coin<sui::bfc::BFC>>, r: address) {
   │                         - To use the variable mutably, it must be declared 'mut', e.g. 'mut v'
18 │         while (!vector::is_empty(&v)) {
19 │             let c = vector::pop_back(&mut v);
   │                                      ^^^^^^ Invalid mutable borrow of immutable variable 'v'



task 2 'programmable'. lines 28-32:
created: object(1,0)
mutated: object(0,0)
gas summary: computation_cost: 1000000, storage_cost: 261440,  storage_rebate: 0, non_refundable_storage_fee: 0

task 3 'run'. lines 33-33:
Error: INVALID TEST. Unknown object, object(2,0)

task 4 'view-object'. lines 35-37:
Error: task 4, lines 35-35. Unbound fake id 3,0

task 5 'programmable'. lines 38-40:
Error: INVALID TEST. Unknown object, object(3,0)

task 6 'view-object'. lines 42-42:
Error: task 6, lines 42-42. Unbound fake id 3,0

task 7 'view-object'. lines 44-47:
Error: task 7, lines 44-44. Unbound fake id 5,0

task 8 'programmable'. lines 48-50:
Error: INVALID TEST. Unknown object, object(3,0)

task 9 'view-object'. lines 52-52:
Error: task 9, lines 52-52. Unbound fake id 3,0

task 10 'view-object'. lines 54-54:
Error: task 10, lines 54-54. Unbound fake id 8,0

task 11 'view-object'. lines 56-58:
Error: task 11, lines 56-56. Unbound fake id 8,1

task 12 'programmable'. lines 59-62:
Error: INVALID TEST. Unknown object, object(3,0)

task 13 'view-object'. lines 64-64:
Error: task 13, lines 64-64. Unbound fake id 3,0

task 14 'view-object'. lines 66-66:
Error: task 14, lines 66-66. Unbound fake id 12,0

task 15 'view-object'. lines 68-71:
Error: task 15, lines 68-68. Unbound fake id 12,1

task 16 'programmable'. lines 72-76:
Error: INVALID TEST. Unknown object, object(3,0)

task 17 'view-object'. lines 78-78:
Error: task 17, lines 78-78. Unbound fake id 3,0

task 18 'view-object'. lines 80-80:
Error: task 18, lines 80-80. Unbound fake id 16,0

task 19 'view-object'. lines 82-82:
Error: task 19, lines 82-82. Unbound fake id 16,1
